# kirk

./: .gitignore  Kirk.hs  LICENSE  Makefile  Makefile.org  README  array.h  config.mk  files.mk  kirk-Ariadne.hpp  kirk-bound.hh  kirk-c-types.h  kirk-c.c  kirk-common.h  kirk-hs.c  kirk-iRRAM.cc  kirk-iRRAM.hh  kirk-irram-api.cc  kirk-irram-api.h  kirk-real-obj.c  kirk-real-obj.h  lib.mk  logmap-irram.cc  logmap.hs  test-const.c  test-hs.c  test-hs.hs  test-iRRAM.cc  test-irram.c
Data/Number/: Kirk.hs
Data/Number/Kirk/: Debug.hs  Irram.hs
hkirk/: Makefile  hkirk.cabal
hkirk-aern2/: hkirk-aern2.cabal
hkirk-aern2/src/Data/Number/Kirk/: AERN2.hs
hkirk-irram/: .gitignore  Makefile  hkirk-irram.cabal
hkirk-irram/src/Data/Number/Kirk/: Irram.hs
hkirk-irram/tests/: logmap-irram.cc  logmap.hs
hkirk/src/: .gitignore  kirk-hs.c
hkirk/src/Data/Number/: Kirk.hs
hkirk/src/Data/Number/Kirk/: Debug.hs
kirk/: .gitignore  build.mk  flags.mk
kirk-irram/: .gitignore  Makefile  build.mk  flags.mk
kirk-irram/include/: kirk-irram.hh
kirk-irram/src/: kirk-irram-api.cc  kirk-irram.cc  log2.h
kirk-irram/tests/: test-irram.c
kirk/include/: kirk-c-types.h  kirk-dyadic-real.h  kirk-real-obj.h
kirk/src/: kirk-dyadic-real.c  kirk-real-obj.c
