name:                hkirk-aern2
version:             0.1.0.0
synopsis:            iRRAM binding of AERN2
-- description:         
homepage:            https://github.com/fbrausse/kirk
license:             BSD3
license-file:        LICENSE
author:              Michal Konecny,
                     Franz Brauße
maintainer:          Franz Brauße <brausse@informatik.uni-trier.de>
copyright:           Copyright 2017 Franz Brauße <brausse@informatik.uni-trier.de>
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  exposed-modules:     Data.Number.Kirk.AERN2
  -- other-modules:       
  -- other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.9 && <4.10,
                       hkirk >=0.1.0.0 && <0.2.0.0,
                       mixed-types-num >=0.3.1.0 && <0.4.0.0,
                       convertible >=1.1.1.0 && <1.2.0.0,
                       aern2-mp >=0.1.0.1 && <0.2.0.0,
                       aern2-real >=0.1.0.1 && <0.2.0.0
  ghc-options:         -Wall
  cpp-options:         -DKIRK_HAVE_AERN2

  -- extra-libraries: kirk-irram

  -- c-sources:           src/kirk-hs.c
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP
