name:                hkirk-irram
version:             0.1.0.0
synopsis:            iRRAM binding of Kirk
-- description:         
homepage:            https://github.com/fbrausse/kirk
license:             BSD3
license-file:        LICENSE
author:              Franz Brauße
maintainer:          Franz Brauße <brausse@informatik.uni-trier.de>
copyright:           Copyright 2017 Franz Brauße <brausse@informatik.uni-trier.de>
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

Flag intree
  Description: enable to link against ../kirk/libkirk.so, ../kirk-irram/libkirk-irram.so
  Default    : False

library
  exposed-modules:     Data.Number.Kirk.Irram
  -- other-modules:       
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.9 && <4.10, hkirk >=0.1.0.0 && <0.2.0.0
  ghc-options:         -Wall -fno-full-laziness -threaded
  cpp-options:         -DKIRK_HAVE_IRRAM

--  if flag(intree)
--    extra-lib-dirs: ../kirk
--    include-dirs: ../kirk/include

  extra-libraries: kirk-irram

  -- c-sources:           src/kirk-hs.c
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  CPP
